# cargo-emit

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: macros.rs
src/: lib.rs  pair.rs  rerun.rs  rerun_if_changed.rs  rerun_if_env_changed.rs  rustc.rs  rustc_cdylib_link_arg.rs  rustc_cfg.rs  rustc_env.rs  rustc_flags.rs  rustc_link_arg.rs  rustc_link_arg_bin.rs  rustc_link_arg_bins.rs  rustc_link_lib.rs  rustc_link_search.rs  warning.rs
src/convenience/: compare_and_set_contents_hash.rs  mod.rs
