[package]
name = "cargo-emit"
version = "0.2.1"
authors = ["Nikolai Vazquez", "Vincent Esche"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/nvzqz/cargo-emit"
repository = "https://github.com/nvzqz/cargo-emit"
documentation = "https://docs.rs/cargo-emit"
description = "Talk to Cargo easily at build time."
categories = ["development-tools::build-utils", "no-std", "rust-patterns"]
keywords = ["cargo", "build", "print", "warn"]
include = ["Cargo.toml", "src", "README.md", "CHANGELOG.md", "LICENSE*"]
edition = "2018"

[dev-dependencies]
insta = "1.7.2"

[dependencies]
fxhash = { version = "0.2.1", optional = true }

[features]
compare_and_set_contents_hash = ["fxhash"]
